# multi-agent

./: .gitignore  env.example  langgraph.json  logger_demo.py  main.py  pyproject.toml  pyrightconfig.json
src/: main.py
src/agents/: main_agent.py  state.py
src/agents/appointment/: agent.py  prompt.py  state.py  tools.py
src/agents/prescription/: agent.py  prompt.py  state.py  tools.py
src/agents/supervisor/: agent.py  state.py  tools.py
src/apis/: chat.py  main.py  voice.py
src/core/: llm_provider.py
src/libs/: __init__.py
src/libs/logger/: README.md  __init__.py  _setup.py  config.py  demo.py  enums.py  manager.py
src/libs/redis/: __init__.py  redis.py  redis_setting.py
src/mock/: __init__.py  appointment.py  mock_data.py  patient.py  prescription.py  provider.py  sample_payload.json  slot.py
